# Error-Dosi

./: Brachytherapy.cpp  Brachytherapy.h  Brachytherapy.ui  CMakeLists.txt  CTDosimetry.cpp  CTDosimetry.h  Error_Software  Error_Software.pro  Makefile  NMDosimetry.cpp  NMDosimetry.h  NMDosimetry.ui  README.md  integradedose.cpp  integradedose.h  interp.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qrc_qml.cpp  resources.qrc  ui_Brachytherapy.h  ui_CTDosimetry.h  ui_NMDosimetry.h  ui_mainwindow.h  ui_vvDeformationDialog.h  ui_vvDicomSeriesSelector.h  ui_vvDocumentation.h  ui_vvDummyWindow.h  ui_vvHelpDialog.h  ui_vvInfoPanel.h  ui_vvIntensityValueSlider.h  ui_vvLabelImageLoaderWidget.h  ui_vvLandmarksPanel.h  ui_vvLinkPanel.h  ui_vvMainWindow.h  ui_vvMainWindowVTK7.h  ui_vvOverlayPanel.h  ui_vvProgressDialog.h  (+18 more)
Error-Dosi_autogen/: moc_predefs.h  mocs_compilation.cpp
StyleSheets/: mainWindow.qss  pushbuttton.qss
StyleSheets/BlueGlass/: blueglass.qss
StyleSheets/Minimalist/: Minimalist.qss
VV/common/: clitkBinarizeImage_ggo.h  clitkCommon.cxx  clitkCommonGenericFilter.h  clitkConfiguration.h  clitkCropImageGenericFilter.h  clitkCropImage_ggo.h  clitkDicomRTDoseIO.cxx  clitkDicomRTDoseIOFactory.cxx  clitkDicomRTStruct2ImageFilter.cxx  clitkDicomRTStruct2ImageFilter.h  clitkHistogramImage_ggo.h  clitkIO.cxx  clitkImageArithmGenericFilter.h  clitkImageArithm_ggo.h  clitkImageCommon.cxx  clitkMIPGenericFilter.h  clitkMIP_ggo.h  clitkMedianImageFilter_ggo.h  clitkMedianImageGenericFilter.h  clitkMemoryUsage.cxx  clitkProfileImage_ggo.h  clitkVfImageIO.cxx  clitkVfImageIOFactory.cxx  clitkVoxImageIO.cxx  vvImage.txx  vvImageReader.txx  vvImageWriter.cxx  vvToITK.h  ximage.h  ximagif.h
VV/itk/: clitkAutoCropFilter.txx  clitkBoundingBoxUtils.h  clitkCropLikeImageFilter.h  clitkCropLikeImageFilter.txx  clitkInvertVFFilter.h  clitkProfileImageGenericFilter.h
VV/vv/: vvAnimatedGIFWriter.cxx  vvBinaryImageOverlayActor.cxx  vvBinaryImageOverlayActor.h  vvBlendImageActor.cxx  vvConfiguration.h  vvCropDialog.h  vvImageContour.cxx  vvImageContour.h  vvImageWarp.cxx  vvImageWarp.h  vvInfoPanel.cxx  vvIntensityValueSlider.h  vvInteractorStyleNavigator.cxx  vvLandmarks.cxx  vvMesh.cxx  vvMesh.h  vvMeshActor.cxx  vvMeshActor.h  vvMeshReader.cxx  vvMeshReader.h  vvMidPosition.cxx  vvMidPosition.h  vvQDicomSeriesSelector.h  vvQProgressDialogITKCommand.cxx  vvQProgressDialogITKCommand.h  vvROIActor.h  vvSlicer.cxx  vvSlicer.h  vvSlicerManager.cxx  vvSlicerManager.h  vvSlicerManagerCommand.cxx  vvStructureSetActor.h  vvToolRigidReg.cxx  vvToolRigidReg.h
VV/vv/qt_ui/: vvInfoPanel.ui
data/: ._I123_MIBG  ._I131_INa1  ._I131_INa2  ._I131_MIBG  ._Sm153_EDTMP  ._Tc99m_MDP  ._excel_files  Final_ERROR_for_software_v1.xlsx
data/Brachytherapy/blender/: bebig.blend  m19.blend  pdr_v2.blend
data/Brachytherapy/stl/: bebig.stl  m19.stl  pdr_v2.stl
data/CT-Dosimetry/100kVp/Abdomen/: phantom_001.txt  phantom_002.txt  phantom_003.txt  phantom_004.txt  phantom_005.txt  phantom_007.txt  phantom_008.txt  phantom_009.txt  phantom_010.txt  phantom_011.txt  phantom_012.txt  phantom_013.txt
data/CT-Dosimetry/100kVp/Chest/: phantom_001.txt  phantom_002.txt  phantom_003.txt  phantom_004.txt  phantom_005.txt  phantom_007.txt  phantom_008.txt  phantom_009.txt  phantom_010.txt  phantom_011.txt  phantom_012.txt  phantom_013.txt
data/CT-Dosimetry/100kVp/Head/: phantom_001.txt  phantom_002.txt  phantom_003.txt  phantom_004.txt  phantom_005.txt  phantom_007.txt  phantom_008.txt  phantom_009.txt  phantom_010.txt  phantom_011.txt  phantom_012.txt  phantom_013.txt
data/CT-Dosimetry/120kVp/Abdomen/: phantom_001.txt  phantom_002.txt  phantom_003.txt  phantom_004.txt  phantom_005.txt  phantom_007.txt  phantom_008.txt  phantom_009.txt  phantom_010.txt  phantom_011.txt  phantom_012.txt  phantom_013.txt
data/CT-Dosimetry/120kVp/Chest/: phantom_001.txt  phantom_002.txt  phantom_003.txt  phantom_004.txt  phantom_005.txt  phantom_007.txt  phantom_008.txt  (+5 more)
data/I123_MIBG/: ._time_activity_curves_I123_MIBG.txt  time_activity_curves_I123_MIBG.txt
data/I131_INa1/: ._time_activity_curves_I131_INa1.txt
data/I131_INa2/: ._time_activity_curves_I131_INa2.txt  time_activity_curves_I131_INa2.txt
data/I131_MIBG/: ._time_activity_curves_I131_MIBG.txt  phantom_001.txt
data/NM-Dosimetry/I123_MIBG/: phantom_006.txt  phantom_007.txt  phantom_009.txt  phantom_010.txt  phantom_012.txt  phantom_013.txt
data/NM-Dosimetry/I131_INa1/: phantom_006.txt  phantom_007.txt  phantom_009.txt  phantom_010.txt  phantom_012.txt  phantom_013.txt  time_activity_curves_I131_INa1.txt
data/NM-Dosimetry/I131_INa2/: phantom_006.txt  phantom_007.txt  phantom_009.txt  phantom_010.txt  phantom_012.txt  phantom_013.txt
data/NM-Dosimetry/I131_MIBG/: phantom_006.txt  phantom_007.txt  phantom_009.txt  phantom_010.txt  phantom_012.txt  phantom_013.txt
data/NM-Dosimetry/Sm153_EDTMP/: phantom_006.txt  phantom_007.txt  phantom_009.txt  phantom_010.txt  phantom_012.txt  phantom_013.txt  time_activity_curves_Sm153_EDTMP.txt
data/NM-Dosimetry/Tc99m_MDP/: phantom_006.txt  phantom_007.txt  phantom_008.txt  phantom_009.txt  phantom_012.txt  phantom_013.txt  time_activity_curves_Tc99m_MDP.txt
data/Sm153_EDTMP/: ._phantom_001.txt  ._time_activity_curves_Sm153_EDTMP.txt  phantom_001.txt
data/Tc99m_MDP/: ._phantom_001.txt  ._time_activity_curves_Tc99m_MDP.txt  .~lock.phantom_001.txt#
data/excel_files/: ._ERROR_Updated_db.xlsx  ._Tc-99m_doses.xlsx  ._Time activity curves.xlsx  ERROR_Updated_db.xlsx  Tc-99m_doses.xlsx  Time activity curves.xlsx
forms/: Brachytherapy.ui  CTDosimetry.ui  NMDosimetry.ui  mainwindow.ui
headers/: Brachytherapy.h  CTDosimetry.h  NMDosimetry.h  integradedose.h  interp.hh  mainwindow.h  moc_Brachytherapy.cpp  moc_CTDosimetry.cpp  moc_NMDosimetry.cpp  moc_integradedose.cpp  moc_mainwindow.cpp
qml/: Bebig_Theragenics.qml  M-19_HDR.qml  Nucletron_mPDR-v2.qml
scripts/: phantom_matching.sh
sources/: Brachytherapy.cpp  CTDosimetry.cpp  NMDosimetry.cpp  integradedose.cpp  interp.cc  main.cpp  mainwindow.cpp
(+191 files in other folders)
